--- a/Frontend/src/components/homepage/homepage.css
+++ b/Frontend/src/components/homepage/homepage.css
@@ -1,4 +1,4 @@
-.homepage {
+/* .homepage {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,9 +9,9 @@
     box-shadow: 0 0 15px 5px grey;
     background: white;
     position: relative
-}
+} */
 
-.homepage > .button {
+.button {
     background: #1877f2;
     border: 1px solid #1877f2;
     color: #fff;
